# autogen

./: .gitlab-ci.yml  .gitmodules  AutoGen.sublime-project  CMakeLists.txt  Readme.md
cmake/: FindEigen3.cmake
codegen/: CMakeLists.txt  ExpCoords-ddR.cpp  RigidBody-domega.cpp
codegen/generated-code/: ddR.cpp
examples/: CMakeLists.txt  ExpCoords.h  angle-axis-cg.h  ddR_i_j.h  example-angle-axis.cpp  example-ddR-cg.cpp  example-ddR-test.cpp  example-motor-djac.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example_RecTypeT.cpp  example_autodiff.cpp  example_codegen.cpp  example_codegen_easy.cpp  example_matrix.cpp
ext/: CMakeLists.txt
src/: AutoDiff.h  AutoGen.h  AutoLoad.h  CMakeLists.txt  CodeGenerator.h  ExpCoords.h  Matrix.h  Node.h  NodeMatrix.h  NodeMatrixT.h  NodeTypes.h  NodeTypesMatrix.h  RecType.h  RecTypeMatrix.h  RecTypeT.h  RigidBody.h  Tensors.h  VarDef.h  execCmd.h
tests/: AutoLoadTest.h  CMakeLists.txt  ExpCoordsTest.h  FiniteDifference.h  GTestEigen.h  MatrixTest.h  RigidBodyTest.h  test.cpp
